  * Add get_max_size method to data interfaces for applications using data with
    variable size to express their maximal potential size.
  * New offline tool to draw graph showing elapsed time between sent
    or received data and their use by tasks
  * Add 4D tensor data interface.
  * New sched_tasks.rec trace file which monitors task scheduling push/pop actions

Small changes:
  * Use the S4U interface of Simgrid instead of xbt and MSG.

StarPU 1.3.4 (git revision xxx)
==============================================

Small features:
  * New environment variables STARPU_BUS_STATS_FILE and
    STARPU_WORKER_STATS_FILE to specify files in which to display
    statistics about data transfers and workers.
  * Add starpu_bcsr_filter_vertical_block filtering function.
  * Add starpu_interface_copy2d, 3d, and 4d to easily request data copies from
    data interfaces.
  * Move optimized cuda 2d copy from interfaces to new
    starpu_cuda_copy2d_async_sync and starpu_cuda_copy3d_async_sync, and use
    them from starpu_interface_copy2d and 3d.
  * New function starpu_task_watchdog_set_hook to specify a function
    to be called when the watchdog is raised

StarPU 1.3.3 (git revision 11afc5b007fe1ab1c729b55b47a5a98ef7f3cfad)
====================================================================

New features:
  * New semantic for starpu_task_insert() and alike parameters
    STARPU_CALLBACK_ARG, STARPU_PROLOGUE_CALLBACK_ARG, and
    STARPU_PROLOGUE_CALLBACK_POP_ARG which set respectively
    starpu_task::callback_arg_free,
    starpu_task::prologue_callback_arg_free and
    starpu_task::prologue_callback_pop_arg_free to 1 when used.
    New parameters STARPU_CALLBACK_ARG_NFREE,
    STARPU_CALLBACK_WITH_ARG_NFREE, STARPU_PROLOGUE_CALLBACK_ARG_NFREE, and
    STARPU_PROLOGUE_CALLBACK_POP_ARG_NFREE which set the corresponding
    fields of starpu_task to 0.
  * starpufft: Support 3D.
  * New modular-eager-prio scheduler.
  * Add 'ready' heuristic to modular schedulers.