@@ -41,6 +41,19 @@ static void _starpu_mpi_isend_irecv_common(struct _starpu_mpi_req *req, enum sta
 	/* Asynchronously request StarPU to fetch the data in main memory: when
 	 * it is available in main memory, _starpu_mpi_submit_ready_request(req) is called and
 	 * the request is actually submitted */
+
+	if (_starpu_mpi_mem_throttle && mode & STARPU_W && !req->data_handle->initialized)
+	{
+		/* We will trigger allocation, pre-reserve for it */
+		size_t size = starpu_data_get_size(req->data_handle);
+		if (size)
+		{
+			/* This will potentially block */
+			starpu_memory_allocate(STARPU_MAIN_RAM, size, STARPU_MEMORY_WAIT);
+			req->reserved_size = size;
+		}
+	}
+
 	starpu_data_acquire_on_node_cb_sequential_consistency_sync_jobids(req->data_handle, STARPU_MAIN_RAM, mode, _starpu_mpi_submit_ready_request, (void *)req, sequential_consistency, 1, &req->pre_sync_jobid, &req->post_sync_jobid);
 }
 
